# DeepPulse

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONFIG_GUIDE.md  CONTRIBUTING.md  LICENSE  QUICK_START.md  README.md  TUI_GUIDE.md  WEB_README.md  config.py  coverage.xml  pyproject.toml  requirements.txt  setting.example.json  setup_config.py  verify_upgrade.py  短线战法框架.txt
.cache/: strategy_summary.json
.claude/: settings.local.json
.github/workflows/: ci.yml
agent/: agent.py  backtest.py  charts.py  cli.py  client.py  datalink.py  journal.py  judge_agent.py  market.py  memory.py  news.py  patterns.py  prompts.py  reasoning.py  screener.py  strategy_loader.py  timeframes.py  tools.py  tui_cli.py  watchlist.py
agent/memory/: __init__.py  bm25.py  constants.py  knowledge.py  manager.py  prediction.py  profile.py
agent/strategies/: 01-放量突破战法.md  04-低位首板战法.md  05-首板回封战法.md  06-题材首板战法.md  11-换手二板战法.md  12-加速二板战法.md  13-三板接力战法.md  16-高位T字板接力战法.md  17-5日线低吸战法.md  19-平台支撑低吸战法.md  22-翘板战法.md  23-反核战法.md  24-超跌低吸战法.md  25-点火半路战法.md  26-板后半路战法.md  31-卡位战法.md  34-集合竞价战法.md  39-换手板战法.md
agent/tools/: __init__.py  _shared.py  analysis.py  backtesting.py  candle.py  decorator.py  dragon_tiger_rank.py  market.py  memory_system.py  memory_tools.py  misc.py  news.py  north_bound.py  portfolio.py  sentiment.py  short_term.py  strategy.py  trade_log.py  util.py  watch_list.py
agent/tui/: app.py  styles.tcss  widgets.py
cli/: __main__.py
deeppulse/: __init__.py  config.py
deeppulse/agent/: agent.py  backtest.py  backtest_optimizer.py  charts.py  cli.py  client.py  datalink.py  divergence.py  fund_flow.py  indicators.py  journal.py  judge_agent.py  market.py  patterns.py  prompts.py  screener.py  screener_v2.py  strategy_loader.py  support_resistance.py  timeframe_confluence.py  timeframes.py  trend.py  tui_cli.py  volume_analysis.py  watchlist.py
deeppulse/agent/memory/: __init__.py  embedding.py  knowledge.py  manager.py  prediction.py  profile.py
deeppulse/agent/strategies/: 02-接力战法.md  03-低吸战法.md  07-日内首板战法.md  08-换手首板战法.md  09-一字首板战法.md  10-二板接力战法.md  14-高位接力战法.md  15-高位缩量加速接力战法.md  18-10日线低吸战法.md  20-龙头首阴反包战法.md  21-分歧低吸战法.md  27-超跌反弹半路战法.md  28-弱转强半路战法.md  29-龙头战法.md  30-龙头二波战法.md  32-补涨龙战法.md  33-龙头情绪周期战法.md  35-尾盘套利战法.md  36-分时攻击波战法.md  37-分时背离战法.md  38-分歧转一致战法.md  40-空仓战法.md  README.md
deeppulse/agent/tools/: __init__.py  _shared.py  analysis.py  market.py  memory_tools.py  news.py  portfolio.py  sentiment.py  strategy.py
deeppulse/agent/tui/: __init__.py  app.py  widgets.py
deeppulse/src/: collector.py  database.py  query.py  resilience.py  validation.py
deeppulse/src/realtime/: __init__.py  base.py  eastmoney_source.py  manager.py  sina_source.py
deeppulse/src/sources/: __init__.py  akshare_source.py  baostock_source.py  base.py
docs/: 技术文档.md
frontend/: next.config.js  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/analysis/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/app/memory/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/strategies/: page.tsx
frontend/src/components/chat/: ChatPanel.tsx  MessageBubble.tsx  ThinkingBlock.tsx  ToolCallBadge.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/styles/: globals.css
scripts/: fetch_all.py  fetch_kline.py  fetch_stocks.py  init_db.py  update_data.py  verify_data.py
src/: collector.py  database.py  query.py
src/realtime/: __init__.py  base.py  eastmoney_source.py  manager.py  sina_source.py
src/sources/: akshare_source.py  baostock_source.py  base.py
tests/: conftest.py  test_agent.py  test_backtest.py  test_client.py  test_database.py  test_e2e.py  test_journal.py  test_market.py  test_memory_unit.py  test_memory_upgrade.py  test_news.py  test_patterns.py  test_query.py  test_realtime.py  test_resilience.py  test_screener.py  test_tools.py  test_validation.py  test_watchlist.py
tui/: __main__.py
web/: requirements.txt
web/app/: main.py
web/app/api/: analysis.py  market.py  memory.py  portfolio.py  system.py
web/app/services/: agent_pool.py  session_store.py
web/app/ws/: chat_handler.py  realtime_handler.py
web/static/: index.html
webapp/: __main__.py
